Fix gravatar margins on mobile

--- a/css/index.styl
+++ b/css/index.styl
@@ -712,7 +712,7 @@ breakpoint(point, value = 0)
       @media screen and (max-width: 480px)
         width 70px
         height 70px
-        margin 15px auto 0
+        margin 5px auto 0
 
     .auth0-lock-widget
       opacity 1
